El parametro pAssemblyString espera el siguiente formato : [Namespase.ClassName ,Assembly]

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,4 @@ Fwk/Test/Fwk.Cache.Test/obj/Debug/Fwk.Cache.Test.frmAddItem.resources
 Fwk/Test/Fwk.Cache.Test/obj/Debug/Fwk.Cache.Test.frmCacheFactoryTest.resources
 Fwk/Test/Fwk.Cache.Test/obj/Debug/Fwk.Cache.Test.frmSelectItem.resources
 Fwk/Test/Fwk.Bases.Test/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+Fwk/Fwk.Bases/Blocks/Fwk.Exceptions/FrameworkErrors.txt.bak
