--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,25 @@ FrameworkTools/Fwk.CodeGenerator/Fwk.CodeGenerator/obj/Release/Fwk.CodeGenerator
 FrameworkTools/Fwk.CodeGenerator/Fwk.CodeGenerator/obj/Release/Fwk.CodeGenerator.wizDBSelect.resources
 FrameworkTools/Fwk.CodeGenerator/Fwk.CodeGenerator/obj/Release/Fwk.CodeGenerator.wizTablesTreeSelector.resources
 FrameworkTools/Fwk.CodeGenerator/Fwk.CodeGenerator/obj/Release/TempPE/Properties.Resources.Designer.cs.dll
+Fwk/Test/Fwk.Bases.Test/bin/Debug/Fwk.Bases.Test.exe
+Fwk/Test/Fwk.Bases.Test/bin/Debug/Fwk.Bases.Test.pdb
+Fwk/Test/Fwk.Bases.Test/bin/Debug/Fwk.Bases.dll
+Fwk/Test/Fwk.Bases.Test/bin/Debug/Fwk.Bases.pdb
+Fwk/Test/Fwk.Bases.Test/obj/Debug/Fwk.Bases.Test.csprojResolveAssemblyReference.cache
+Fwk/Test/Fwk.Bases.Test/obj/Debug/Fwk.Bases.Test.exe
+Fwk/Test/Fwk.Bases.Test/obj/Debug/Fwk.Bases.Test.pdb
+Fwk/Fwk.Security/bin/Debug/Fwk.Bases.dll
+Fwk/Fwk.Security/bin/Debug/Fwk.Security.dll
+Fwk/Fwk.Security/bin/Debug/Fwk.Security.pdb
+Fwk/Fwk.Bases/bin/Release/Fwk.Bases.dll
+Fwk/Fwk.Bases/bin/Release/Fwk.Bases.pdb
+Fwk/Fwk.Bases/obj/Release/Fwk.Bases.csprojResolveAssemblyReference.cache
+Fwk/Fwk.Bases/obj/Release/Fwk.Bases.dll
+Fwk/Fwk.Bases/obj/Release/Fwk.Bases.pdb
+Fwk/Fwk.Blocking/Fwk.Blocking.BlockingService/bin/Release/Fwk.Bases.dll
+Fwk/Fwk.Blocking/Fwk.Blocking.BlockingService/bin/Release/Fwk.Bases.pdb
+Fwk/Fwk.Blocking/Fwk.Blocking.BlockingService/bin/Release/Fwk.Blocking.BlockingService.exe
+Fwk/Fwk.Blocking/Fwk.Blocking.BlockingService/bin/Release/Fwk.Blocking.BlockingService.pdb
+Fwk/Fwk.Blocking/Fwk.Blocking.BlockingService/obj/Release/Fwk.Blocking.BlockingService.csprojResolveAssemblyReference.cache
+Fwk/Fwk.Blocking/Fwk.Blocking.BlockingService/obj/Release/Fwk.Blocking.BlockingService.exe
+Fwk/Fwk.Blocking/Fwk.Blocking.BlockingService/obj/Release/Fwk.Blocking.BlockingService.pdb
