Mejoras en Active directory helper Se agregan cambios para uso de Encriptacion en App Configuration mannager tool

--- a/Fwk/Fwk.Blocking/Fwk.Blocking.BlockingService/Fwk.Blocking.BlockingService.csproj
+++ b/Fwk/Fwk.Blocking/Fwk.Blocking.BlockingService/Fwk.Blocking.BlockingService.csproj
@@ -116,9 +116,12 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Configuration.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
     <None Include="install.bat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
