mejoras remoting test

--- a/Dispatchers/TestServicePerformance/TestServicePerformance/App.config
+++ b/Dispatchers/TestServicePerformance/TestServicePerformance/App.config
@@ -12,7 +12,7 @@
     <Providers>
       <add name="local" type="Fwk.Bases.Connector.LocalWrapper,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="" />
       <add name="remoto" type="Fwk.Bases.Connector.RemotingWrapper,Fwk.Bases.Connector"
-           appId="pelsoft" serviceMetadataProviderName="health" 
+           appId="pelsoft" serviceMetadataProviderName="Xml_test" 
            sourceinfo="RemotingConfigFile.config" />
     </Providers>
   </FwkWrapper>
