--- a/FrameworkTools/SecurityAppBlock/Fwk.Security.AD.TestLogin/App.config
+++ b/FrameworkTools/SecurityAppBlock/Fwk.Security.AD.TestLogin/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="testActiveDirectory" connectionString="Data Source=santana\sqlexpress;Initial Catalog=pelsoft;Integrated Security=True" providerName="System.Data.SqlClient"/>
-   
+    <add name="celam" connectionString="Data Source=santana\SQLEXPRESS2008;Initial Catalog=celam;Persist Security Info=True;User ID=celam;Password=as" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.serviceModel>
     <bindings>
