--- a/Dispatchers/TestServicePerformance/RemotingDispatcher_Epec/Fwk.Remoting.Listener/RemotingHost.config
+++ b/Dispatchers/TestServicePerformance/RemotingDispatcher_Epec/Fwk.Remoting.Listener/RemotingHost.config
@@ -4,7 +4,7 @@
     <application>
       <service>
         <wellknown mode="SingleCall"
-           type="Fwk.Remoting.RemoteTypes.RemoteObject, Fwk.Remoting.RemoteTypes"
+           type="Fwk.Remoting.FwkRemoteObject, Fwk.Bases"
            objectUri="TestDispatcher.rem"
             />
       </service>
