--- a/Dispatchers/TestServicePerformance/TestServicePerformance/RemotingConfigFile.config
+++ b/Dispatchers/TestServicePerformance/TestServicePerformance/RemotingConfigFile.config
@@ -1,18 +1,20 @@
 <configuration>
     <system.runtime.remoting>
-        <application>
+        <application >
 	    <client>
 			
-			<wellknown  type="Fwk.Remoting.FwkRemoteObject, Fwk.Bases" url="tcp://192.168.1.189:8085/TestDispatcher.rem" />
+			<wellknown  type="Fwk.Remoting.FwkRemoteObject, Fwk.Bases.dll" url="tcp://192.168.2.177:8989/TestDispatcher.rem" />
             </client>
-            <channels>
-                <channel name="tcp config" ref="tcp" port="0">
-                   <serverProviders>
-                        <formatter ref="soap" typeFilterLevel="Full" />
-                        <formatter ref="binary" typeFilterLevel="Full" />
-                   </serverProviders>
-                </channel>
-            </channels>
+          <channels>
+            <channel ref="http" port="0">
+              <serverProviders>
+                <formatter ref="binary" typeFilterLevel="Full"/>
+              </serverProviders>
+              <clientProviders>
+                <formatter ref="binary"/>
+              </clientProviders>
+            </channel>
+          </channels>
         </application>
         <customErrors mode="off" />
     </system.runtime.remoting>
