--- a/FrameworkTools/SecurityAppBlock/Fwk.Security.ActiveDirectory.Test/App.config
+++ b/FrameworkTools/SecurityAppBlock/Fwk.Security.ActiveDirectory.Test/App.config
@@ -22,7 +22,7 @@
   </securityConfiguration>
   <connectionStrings>
     <add name="SqlServices" connectionString="Data Source=S1DESARROLLO22\SQLEXPRESS;Initial Catalog=aspnetdb;Integrated Security=True" providerName="System.Data.SqlClient"/>
-	  
+    <add name="celam" connectionString="Data Source=santana\SQLEXPRESS2008;Initial Catalog=celam;Persist Security Info=True;User ID=celam;Password=as" providerName="System.Data.SqlClient"/>
 	  <add name="ADConnectionString" connectionString="LDAP://CORRSF71NT13.Datacom.org/DC=Datacom,DC=org"/>
 
   </connectionStrings>
