--- a/Fwk/Fwk.Bases.Connector/Remoting/RemotingConfigFile.config
+++ b/Fwk/Fwk.Bases.Connector/Remoting/RemotingConfigFile.config
@@ -2,7 +2,7 @@
     <system.runtime.remoting>
         <application>
 	    <client>
-                <wellknown type="Fwk.Remoting.FwkRemoteObject, Fwk.Bases" url="tcp://localhost:8989/remotinbgCnn.rem" />
+                <wellknown type="Fwk.Remoting.FwkRemoteObject, Fwk.Bases.dll" url="tcp://localhost:8989/remotinbgCnn.rem" />
             </client>
             <channels>
                 <channel name="tcp config" ref="tcp" port="0">
