ahhelper , helper functions Security app block

--- a/.gitignore
+++ b/.gitignore
@@ -355,3 +355,22 @@ FrameworkTools/SecurityAppBlock/SecurityAppBlock.Use/bin/Debug/SecurityAppBlock.
 FrameworkTools/SecurityAppBlock/SecurityAppBlock.Use/bin/Debug/SecurityAppBlock.Use.vshost.exe.config
 FrameworkTools/SecurityAppBlock/SecurityAppBlock.Use/bin/Debug/SecurityAppBlock.Use.vshost.exe.manifest
 FrameworkTools/SecurityAppBlock/SecurityAppBlock.Use/obj/Debug/SecurityAppBlock.Use.csproj.FileListAbsolute.txt
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/bin/Debug/CentralizedSecurity.W32.Test.exe
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/bin/Debug/CentralizedSecurity.W32.Test.exe.config
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/bin/Debug/Fwk.Bases.xml
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/bin/Debug/Fwk.Security.xml
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/obj/x86/Debug/CentralizedSecurity.W32.Test.Form1.resources
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/obj/x86/Debug/CentralizedSecurity.W32.Test.Properties.Resources.resources
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/obj/x86/Debug/CentralizedSecurity.W32.Test.csproj.FileListAbsolute.txt
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/obj/x86/Debug/CentralizedSecurity.W32.Test.csproj.GenerateResource.Cache
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/obj/x86/Debug/CentralizedSecurity.W32.Test.csprojResolveAssemblyReference.cache
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/obj/x86/Debug/CentralizedSecurity.W32.Test.exe
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/obj/x86/Debug/SecurityAppBlock.Use.CredentialsForm.resources
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/obj/x86/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/obj/x86/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+FrameworkTools/SecurityAppBlock/CentralizedSecurity.W32.Test/obj/x86/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+FrameworkTools/SecurityAppBlock/Fwk.CentralizedSecurity/bin/Fwk.Bases.xml
+FrameworkTools/SecurityAppBlock/Fwk.CentralizedSecurity/bin/Fwk.Security.xml
+FrameworkTools/SecurityAppBlock/Fwk.CentralizedSecurity/bin/ServiceMetadataConfig.xml
+FrameworkTools/SecurityAppBlock/Fwk.CentralizedSecurity/obj/Debug/Fwk.CentralizedSecurity.csproj.FileListAbsolute.txt
+FrameworkTools/SecurityAppBlock/Fwk.CentralizedSecurity/obj/Debug/Fwk.CentralizedSecurity.csprojResolveAssemblyReference.cache
