--- a/Fwk/Fwk.Bases/Fwk.Bases.csproj
+++ b/Fwk/Fwk.Bases/Fwk.Bases.csproj
@@ -105,6 +105,7 @@
     <Reference Include="System.Security" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
