wcf dispatcher merge

--- a/Dispatchers/TestServicePerformance/TestServicePerformance/App.config
+++ b/Dispatchers/TestServicePerformance/TestServicePerformance/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="FwkWrapper" type="Fwk.ConfigSection.WrapperProviderSection, Fwk.Bases" />
+    <section name="FwkWrapper" type="Fwk.ConfigSection.WrapperProviderSection, Fwk.Bases"/>
   </configSections>
 
   <appSettings>
@@ -10,11 +10,9 @@
   
   <FwkWrapper defaultProviderName="remoto">
     <Providers>
-      <add name="local" type="Fwk.Bases.Connector.LocalWrapper,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="" />
-      <add name="remoto" type="Fwk.Bases.Connector.RemotingWrapper,Fwk.Bases.Connector"
-           appId="pelsoft" serviceMetadataProviderName="Xml_test" 
-           sourceinfo="RemotingConfigFile.config" />
+      <add name="local" type="Fwk.Bases.Connector.LocalWrapper,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo=""/>
+      <add name="remoto" type="Fwk.Bases.Connector.RemotingWrapper,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="RemotingConfigFile.config"/>
     </Providers>
   </FwkWrapper>
 
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
