--- a/Dispatchers/WcfDispatcher/WcfDispatcherSvc/App.config
+++ b/Dispatchers/WcfDispatcher/WcfDispatcherSvc/App.config
@@ -19,7 +19,23 @@
       </sectionGroup>
     </sectionGroup>
   </configSections>
+  <connectionStrings>
+    <!--	  <add name="EpironConfigurador" connectionString="data source=AAVMBD03\SQL2008DESA;&#xD;&#xA;   initial catalog=Epiron3DesarrolloGestion;persist security info=True; &#xD;&#xA;   Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+	  <add name="EpironConfigurador_BDMaster" connectionString="data source=AAVMBD03\SQL2008DESA;&#xD;&#xA;   initial catalog=Epiron3Desarrollo_Master;persist security info=True; &#xD;&#xA;   Integrated Security=SSPI;" providerName="System.Data.SqlClient" /> -->
 
+    <add name="BlockingModel" connectionString="Data Source=172.22.14.38\SQL2008DESA;Initial Catalog=Epiron3DesarrolloGestion_Blocking;Persist Security Info = True;User ID=Epiron3Desarrollo_srvBlocking;Password=9055CD21-3F2A-4B3E-AB1E-C3F2DDBEBF50" providerName="System.Data.SqlClient"/>
+    <add name="EpironConfigurador" connectionString="Data Source=172.22.14.38\SQL2008DESA;Initial Catalog=Epiron3DesarrolloGestion;Persist Security Info = True;User ID=Epiron3Desarrollo_Servicio;Password=1A96C8A4-A550-4871-B577-A949362B9909" providerName="System.Data.SqlClient"/>
+    <add name="EpironConfigurador_BDMaster" connectionString="Data Source=172.22.14.38\SQL2008DESA;Initial Catalog=Epiron3Desarrollo_Master;Persist Security Info = True;User ID=Epiron3Desarrollo_Servicio;Password=1A96C8A4-A550-4871-B577-A949362B9909" providerName="System.Data.SqlClient"/>
+    <add name="EpironReports" connectionString="Data Source=172.22.14.38\SQL2008DESA;Initial Catalog=Epiron3Desarrollo_Reports;Persist Security Info = True;User ID=Epiron3Desarrollo_Servicio;Password=1A96C8A4-A550-4871-B577-A949362B9909" providerName="System.Data.SqlClient"/>
+
+
+    <!--   <add name="EpironConfigurador" connectionString="Data Source=AAVMBD03\SQL2008PREPROD;Initial Catalog=Epiron3PreproduccionGestion;Persist Security Info = True;User ID=Epiron3PreproduccionAppGestor;Password=C335E627-F626-4EAE-BDD9-FACE33F24809" providerName="System.Data.SqlClient" />
+    <add name="EpironConfigurador_BDMaster" connectionString="Data Source=AAVMBD03\SQL2008PREPROD;Initial Catalog=Epiron3Preproduccion_Master;Persist Security Info = True;User ID=Epiron3PreproduccionAppGestor;Password=C335E627-F626-4EAE-BDD9-FACE33F24809" providerName="System.Data.SqlClient" />-->
+
+    <!--  <add name="EpironConfigurador" connectionString="Data Source=172.22.14.38\SQL2008TESTING;Initial Catalog=Epiron3TestingGestion;Persist Security Info = True;User ID=Epiron3Testing_ConfiguradorGestion;Password=D0AE17AA-66FF-4E5D-B9E2-60FEB585AC93" providerName="System.Data.SqlClient" />
+    <add name="EpironConfigurador_BDMaster" connectionString="Data Source=172.22.14.38\SQL2008TESTING;Initial Catalog=Epiron3Testing_Master;Persist Security Info = True;User ID=Epiron3Testing_ConfiguradorGestion;Password=D0AE17AA-66FF-4E5D-B9E2-60FEB585AC93" providerName="System.Data.SqlClient" /> -->
+
+  </connectionStrings>
   <appSettings>
     <!--Nombre logico del dispatcher con el que se lo registro  en la bd: Se utiliza solo si hay un registro de instancias en bd-->
     <add key="ServiceDispatcherName" value="Fwk_Disp_Test"/>
@@ -38,7 +54,7 @@
     <services>
       <service behaviorConfiguration="MEXGET" name="WcfDispatcher.FwkService">
         
-        <endpoint binding="netTcpBinding" bindingConfiguration="TransactionalTCP" name="tcp" contract="WcfDispatcher.IFwkService"/>
+        <endpoint binding="netTcpBinding" bindingConfiguration="TransactionalTCP" name="tcp" contract="WcfDispatcher.Service.IFwkService"/>
         
         <endpoint address="mex" binding="mexHttpBinding" name="web" contract="WcfDispatcher.IFwkService"/>
         <host>
