--- a/Dispatchers/WcfDispatcher/WcfDispatcher_Host/App.config
+++ b/Dispatchers/WcfDispatcher/WcfDispatcher_Host/App.config
@@ -6,13 +6,42 @@
     <section name="FwkConfigProvider" type="Fwk.ConfigSection.ConfigProviderSection, Fwk.Bases"/>
     <section name="FwkServiceMetadata" type="Fwk.ConfigSection.ServiceProviderSection, Fwk.Bases"/>
     <section name="FwkWrapper" type="Fwk.ConfigSection.WrapperProviderSection, Fwk.Bases"/>
-    
+    <sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+      <sectionGroup name="scripting" type="System.Web.Configuration.ScriptingSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+        <section name="scriptResourceHandler" type="System.Web.Configuration.ScriptingScriptResourceHandlerSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+        <sectionGroup name="webServices" type="System.Web.Configuration.ScriptingWebServicesSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+          <section name="jsonSerialization" type="System.Web.Configuration.ScriptingJsonSerializationSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="Everywhere"/>
+          <section name="profileService" type="System.Web.Configuration.ScriptingProfileServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+          <section name="authenticationService" type="System.Web.Configuration.ScriptingAuthenticationServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+          <section name="roleService" type="System.Web.Configuration.ScriptingRoleServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+        </sectionGroup>
+      </sectionGroup>
+    </sectionGroup>
   </configSections>
+  <connectionStrings>
+    <!--	  <add name="EpironConfigurador" connectionString="data source=AAVMBD03\SQL2008DESA;&#xD;&#xA;   initial catalog=Epiron3DesarrolloGestion;persist security info=True; &#xD;&#xA;   Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+	  <add name="EpironConfigurador_BDMaster" connectionString="data source=AAVMBD03\SQL2008DESA;&#xD;&#xA;   initial catalog=Epiron3Desarrollo_Master;persist security info=True; &#xD;&#xA;   Integrated Security=SSPI;" providerName="System.Data.SqlClient" /> -->
 
+    <add name="BlockingModel" connectionString="Data Source=172.22.14.38\SQL2008DESA;Initial Catalog=Epiron3DesarrolloGestion_Blocking;Persist Security Info = True;User ID=Epiron3Desarrollo_srvBlocking;Password=9055CD21-3F2A-4B3E-AB1E-C3F2DDBEBF50" providerName="System.Data.SqlClient"/>
+    <add name="EpironConfigurador" connectionString="Data Source=172.22.14.38\SQL2008DESA;Initial Catalog=Epiron3DesarrolloGestion;Persist Security Info = True;User ID=Epiron3Desarrollo_Servicio;Password=1A96C8A4-A550-4871-B577-A949362B9909" providerName="System.Data.SqlClient"/>
+    <add name="EpironConfigurador_BDMaster" connectionString="Data Source=172.22.14.38\SQL2008DESA;Initial Catalog=Epiron3Desarrollo_Master;Persist Security Info = True;User ID=Epiron3Desarrollo_Servicio;Password=1A96C8A4-A550-4871-B577-A949362B9909" providerName="System.Data.SqlClient"/>
+    <add name="EpironReports" connectionString="Data Source=172.22.14.38\SQL2008DESA;Initial Catalog=Epiron3Desarrollo_Reports;Persist Security Info = True;User ID=Epiron3Desarrollo_Servicio;Password=1A96C8A4-A550-4871-B577-A949362B9909" providerName="System.Data.SqlClient"/>
+
+
+    <!--   <add name="EpironConfigurador" connectionString="Data Source=AAVMBD03\SQL2008PREPROD;Initial Catalog=Epiron3PreproduccionGestion;Persist Security Info = True;User ID=Epiron3PreproduccionAppGestor;Password=C335E627-F626-4EAE-BDD9-FACE33F24809" providerName="System.Data.SqlClient" />
+    <add name="EpironConfigurador_BDMaster" connectionString="Data Source=AAVMBD03\SQL2008PREPROD;Initial Catalog=Epiron3Preproduccion_Master;Persist Security Info = True;User ID=Epiron3PreproduccionAppGestor;Password=C335E627-F626-4EAE-BDD9-FACE33F24809" providerName="System.Data.SqlClient" />-->
+
+    <!--  <add name="EpironConfigurador" connectionString="Data Source=172.22.14.38\SQL2008TESTING;Initial Catalog=Epiron3TestingGestion;Persist Security Info = True;User ID=Epiron3Testing_ConfiguradorGestion;Password=D0AE17AA-66FF-4E5D-B9E2-60FEB585AC93" providerName="System.Data.SqlClient" />
+    <add name="EpironConfigurador_BDMaster" connectionString="Data Source=172.22.14.38\SQL2008TESTING;Initial Catalog=Epiron3Testing_Master;Persist Security Info = True;User ID=Epiron3Testing_ConfiguradorGestion;Password=D0AE17AA-66FF-4E5D-B9E2-60FEB585AC93" providerName="System.Data.SqlClient" /> -->
+
+  </connectionStrings>
   <appSettings>
-    <add key="ServiceDispatcherName" value="Healt_Disp_Test"/>
-    <add key="ServiceDispatcherConnection" value="health_dispatcher"/>
-    <!--<add key="HostApplicationName" value="Health soft service"/>-->
+    <!--Nombre logico del dispatcher con el que se lo registro  en la bd: Se utiliza solo si hay un registro de instancias en bd-->
+    <add key="ServiceDispatcherName" value="Fwk_Disp_Test"/>
+    <!--Cadena de coneccion donde se encuentran las configuraciones del dispatcher: Necesario cuando se utiliza ServiceDispatcherName y la info del dispatcher esta en BD-->
+    <add key="ServiceDispatcherConnection" value="fwk_dispatcher"/>
+    <!--Nombre del dispatcher como instancia de servicio fisico : puede o no coincidir con ServiceDispatcherName-->
+    <add key="HostApplicationName" value="Health soft service"/>
   </appSettings>
   <FwkServiceMetadata defaultProviderName="health">
     <Providers>
@@ -23,28 +52,19 @@
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="MEXGET" name="WcfDispatcher.Service.FwkService">
-        
         <endpoint binding="netTcpBinding" bindingConfiguration="TransactionalTCP" name="tcp" contract="WcfDispatcher.Service.IFwkService"/>
-        
-        <endpoint address="mex" binding="mexHttpBinding" name="web" contract="WcfDispatcher.Service.IFwkService"/>
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:8001/FwkService"/>
-            <add baseAddress="http://localhost:8732/WcfDispatcher/FwkService/"/>
           </baseAddresses>
         </host>
       </service>
-      
+
     </services>
     <behaviors>
       <serviceBehaviors>
         <behavior name="MEXGET">
-          <!-- To avoid disclosing metadata information, 
-          set the value below to false and remove the metadata endpoint above before deployment -->
-          <serviceMetadata httpGetEnabled="True"/>
-          <!-- To receive exception details in faults for debugging purposes, 
-          set the value below to true.  Set to false before deployment 
-          to avoid disclosing exception information -->
+          <serviceMetadata httpGetEnabled="false"/>
           <serviceDebug includeExceptionDetailInFaults="True"/>
         </behavior>
       </serviceBehaviors>
