--- a/Dispatchers/TestServicePerformance/RemotingDispatcher_Epec/Fwk.Remoting.Listener/Fwk.Remoting.Listener.csproj
+++ b/Dispatchers/TestServicePerformance/RemotingDispatcher_Epec/Fwk.Remoting.Listener/Fwk.Remoting.Listener.csproj
@@ -65,10 +65,10 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Fwk.Bases, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Fwk.Bases">
       <HintPath>..\..\..\..\Libraries\Framework\Fwk.Bases.dll</HintPath>
     </Reference>
-    <Reference Include="Fwk.Security, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Fwk.Security">
       <HintPath>..\..\..\..\Libraries\Framework\Fwk.Security.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common">
