--- a/Dispatchers/WcfDispatcher/Cliente/Cliente.csproj
+++ b/Dispatchers/WcfDispatcher/Cliente/Cliente.csproj
@@ -88,6 +88,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileTransferClient.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +97,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\FwkFileTransfer\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Service References\ServiceReference1\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -130,6 +136,29 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Service References\FwkFileTransfer\Cliente.FwkFileTransfer.DownloadFileResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\FwkFileTransfer\Cliente.FwkFileTransfer.UploadFileResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\FwkFileTransfer\FwkFileTransferService.wsdl" />
+    <None Include="Service References\FwkFileTransfer\item.wsdl" />
+    <None Include="Service References\FwkFileTransfer\item.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\FwkFileTransfer\item1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\FwkFileTransfer\item2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\FwkFileTransfer\item3.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\FwkFileTransfer\item4.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Service References\ServiceReference1\Cliente.ServiceReference1.ExecuteServiceResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -169,6 +198,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Service References\FwkFileTransfer\" />
     <WCFMetadataStorage Include="Service References\ServiceReference1\" />
   </ItemGroup>
   <ItemGroup>
@@ -188,6 +218,21 @@
       <Project>{7070D9B9-65D3-433E-A504-E9C30952F973}</Project>
       <Name>SomeCompany.BE</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\FwkFileTransfer\item.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\FwkFileTransfer\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\FwkFileTransfer\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\FwkFileTransfer\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
